--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,10 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
+    <!-- Permissions required by GoogleAuthUtil -->
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.MANAGE_ACCOUNTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -40,6 +44,9 @@
             </intent-filter>
         </service>
         <service android:name = ".MusicService"/>
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="D9:91:20:6C:8D:27:12:B9:1D:55:5B:DF:05:49:B8:8C:CF:C7:7B:A6" />
     </application>
 
 </manifest>
